Edit the title name

--- a/Analytic_Geometry_Note.tex
+++ b/Analytic_Geometry_Note.tex
@@ -1,6 +1,6 @@
 \documentclass[11pt]{book}
-\title{Geometric Algebra Pen Note}
-\author{Kion Conio}
+\title{Analytic Geometry Notes}
+\author{Conio Kion}
 \date{\today}
 
 
